Avoid page breaks in table when converting to pdf

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,6 +14,10 @@
   src: url("./fonts/OsloSans-Regular.woff");
 }
 
+h1,h2 {
+  margin-top: 15px;
+}
+
 body, textarea, input {
   font-family: OsloSans;
 }
@@ -40,7 +44,6 @@ table.matrix  {
   width : 100%;
 }
 table.matrix td {
-  border: 2px solid black;
   overflow: hidden;
   padding: 5px
 }
@@ -55,11 +58,6 @@ td.red {
 }
 
 nav {
-  /* background color-blue-dark
-
-   */
-
-
   background: var(--color-blue-dark);
   height: 30px;
   width: 100%;
@@ -70,26 +68,27 @@ nav {
 
 }
 table {
-  border-collapse: collapse;
   width: 100%;
+  page-break-inside:auto;
+}
+tr {
+  page-break-inside:avoid; page-break-after:auto
 }
 
 table.data {
-  border: solid 1px black;
   margin: 15px 0;
+  border-collapse: collapse;
 
 }
 
 table.data td, table.data th {
-  border: solid 2px black;
+  border: 1px solid var(--color-border);
   padding: 5px;
 }
 
 input {
   width: 100%;
 }
-
-
 
 div.preview, div.edit {
   background-color: var(--color-blue-light);
